# react-native-crypto-cpp

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cryptopp.podspec  LICENSE  NativeCryptopp.podspec  README.md  eslint.config.mjs  package.json  publish.sh  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/cryptopp/: CryptoppModule.kt  CryptoppPackage.kt
cpp/: HashAlgorithms.cpp  HashAlgorithms.h  NativeCryptopp.cpp  NativeCryptopp.h
cpp/common/: NativeSampleModule.cpp  NativeSampleModule.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/cryptopp/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/CryptoppExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/CryptoppExample.xcodeproj/: project.pbxproj
example/ios/CryptoppExample.xcodeproj/xcshareddata/xcschemes/: CryptoppExample.xcscheme
example/src/: App.tsx
example/src/BenchmarkModal/: BenchmarkModal.tsx
ios/: Cryptopp.h  Cryptopp.mm  NativeCryptoppProvider.h  NativeCryptoppProvider.mm
src/: NativeCryptopp.ts  index.tsx
